--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewQualquer"
-        android:text="textViewQualquer"
-        android:layout_centerHorizontal="true"/>
+        android:text="News"
+        android:layout_centerHorizontal="true"
+        android:textSize="24dp"
+        android:textColor="@color/black"
+        android:layout_marginBottom="8dp"
+        android:textStyle="bold"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewHome"
