--- a/app/src/main/res/layout/meu_adapter.xml
+++ b/app/src/main/res/layout/meu_adapter.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:elevation="16dp"
     app:cardCornerRadius="8dp"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:layout_marginBottom="32dp">
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
@@ -28,11 +29,10 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/imageAdapterHome"
             android:layout_alignBottom="@+id/imageAdapterHome"
-            android:layout_margin="16dp"
-            android:inputType="textCapWords"
+            android:layout_margin="8dp"
             android:text="Titulo"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -47,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="16dp"
+                android:layout_marginRight="8dp"
                 android:layoutDirection="inherit"
                 android:text="Data"
                 android:textSize="14sp"
@@ -62,7 +62,7 @@
                 android:layout_alignRight="@id/textViewData"
                 android:layout_alignBottom="@+id/textViewData"
                 android:layout_gravity="center_vertical"
-                android:layout_marginRight="64dp"
+                android:layout_marginRight="8dp"
                 android:layout_weight="2"
                 android:inputType="textCapWords"
                 android:text="Autor"
@@ -82,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linha"
-            android:layout_margin="16dp"
+            android:layout_margin="8dp"
             android:text="Descrição"
             android:textSize="18sp"
             android:id="@+id/textViewDescricao"/>
